# path_master

./: .env  .gitignore  .goreleaser.yaml  Cargo.toml  README.md  build.rs  justfile
assets/: cosign.tpl
docs/man/: path_master.1
src/: main.rs  paths.rs
